[package]
name = "volatility_monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
ethers = { version = "2.0.14", features = ["ws"] }
eyre = "0.6.12"
futures = "0.3.31"
mpsc = "0.2.5"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.2"

