[package]
name = "volatility_monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.4", features = ["full"] }
alloy-pubsub = "0.5.4"
async-trait = "0.1.83"
bigdecimal = "0.4.6"
chrono = "0.4.38"
ethers = { version = "2.0.14", features = ["ws"] }
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
mpsc = "0.2.5"
muldiv = "1.0.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde_json = "1.0.132"
strum = "0.26.3"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
uniswap_v3_math = "0.5.2"
url = "2.5.2"

